--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.6",
     "morgan": "^1.9.1",
-    "mysql": "^2.18.1"
+    "multer": "^1.4.2",
+    "mysql": "^2.18.1",
+    "path": "^0.12.7"
   }
 }
