--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
